tests/filled-param/invalid-specified-as-unfilled.stderr
error[E0277]: the trait bound `ZeroMod8: TotalSizeIsNotMultipleOfEightBits` is not satisfied
 --> tests/filled-param/invalid-specified-as-unfilled.rs:5:1
  |
5 | pub struct UnfilledBitfield {
  | ^^^ the trait `TotalSizeIsNotMultipleOfEightBits` is not implemented for `ZeroMod8`
  |
  = help: the following other types implement trait `TotalSizeIsNotMultipleOfEightBits`:
            FiveMod8
            FourMod8
            OneMod8
            SevenMod8
            SixMod8
            ThreeMod8
            TwoMod8
note: required by a bound in `CheckTotalSizeIsNotMultipleOf8`
 --> src/private/checks.rs
  |
  | pub trait CheckTotalSizeIsNotMultipleOf8
  |           ------------------------------ required by a bound in this trait
  | where
  |     <Self::Size as RenameSizeType>::CheckType: TotalSizeIsNotMultipleOfEightBits,
  |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CheckTotalSizeIsNotMultipleOf8`
  = note: `CheckTotalSizeIsNotMultipleOf8` is a "sealed trait", because to implement it you also need to implement `modular_bitfield::private::checks::TotalSizeIsNotMultipleOfEightBits`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following types implement the trait:
            modular_bitfield::private::checks::OneMod8
            modular_bitfield::private::checks::TwoMod8
            modular_bitfield::private::checks::ThreeMod8
            modular_bitfield::private::checks::FourMod8
            modular_bitfield::private::checks::FiveMod8
            modular_bitfield::private::checks::SixMod8
            modular_bitfield::private::checks::SevenMod8

error[E0277]: the trait bound `ZeroMod8: TotalSizeIsNotMultipleOfEightBits` is not satisfied
 --> tests/filled-param/invalid-specified-as-unfilled.rs:5:1
  |
5 | pub struct UnfilledBitfield {
  | ^^^ the trait `TotalSizeIsNotMultipleOfEightBits` is not implemented for `ZeroMod8`
  |
  = help: the following other types implement trait `TotalSizeIsNotMultipleOfEightBits`:
            FiveMod8
            FourMod8
            OneMod8
            SevenMod8
            SixMod8
            ThreeMod8
            TwoMod8
note: required by a bound in `CheckTotalSizeIsNotMultipleOf8::Size`
 --> src/private/checks.rs
  |
  |     <Self::Size as RenameSizeType>::CheckType: TotalSizeIsNotMultipleOfEightBits,
  |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CheckTotalSizeIsNotMultipleOf8::Size`
  | {
  |     type Size: RenameSizeType;
  |          ---- required by a bound in this associated type
